[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intrapy"
version = "0.1.0"
description = "A Python port of the Intra interactive fiction game engine"
authors = [
    {name = "Michael", email = "michael@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
    "openai>=1.0.0",
    "discord>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]
discord = [
    "discord.py>=2.0.0",
]
tui = [
    "textual>=0.60.0",
    "rich>=13.0.0",
]

[project.scripts]
intrapy-demo = "intrapy.examples.demo:main"
intrapy-discord-bot = "intrapy.examples.discord_bot:main"
intrapy-tui = "intrapy.examples.tui_app:main"

[project.urls]
Homepage = "https://github.com/ianb/intra-game"
Repository = "https://github.com/ianb/intra-game"
Issues = "https://github.com/ianb/intra-game/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["intrapy"]
